add loading spinner for home and its children components

--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -1,5 +1,5 @@
 <div class="ui active inverted dimmer loading-wrapper" *ngIf="!bangumi">
-  <div class="ui large loader"></div>
+  <div class="ui medium loader"></div>
 </div>
 <div class="ui container bangumi-default-container" *ngIf="bangumi">
   <div class="bangumi-info">
