--- a/src/app/home/default/default.less
+++ b/src/app/home/default/default.less
@@ -1,3 +1,9 @@
-.default-container {
-  padding-top: 2rem;
+default-component {
+  .on-air-loading-wrapper {
+    height: 21rem;
+    position: static !important;
+  }
+  .default-container {
+    padding-top: 2rem;
+  }
 }
