--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -1,4 +1,7 @@
 play-episode {
+  .loading-wrapper {
+    position: static !important;
+  }
   .theater-backdrop {
     display: flex;
     flex-direction: row;
