add loading spinner for episodes list in play-episode

--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -115,5 +115,11 @@ play-episode {
         text-align: center;
       }
     }
+
+    .episode-list-loading-wrapper {
+      position: relative;
+      width: 100%;
+      height: 8rem;
+    }
   }
 }
