--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -31,7 +31,12 @@
       <h4>
         各话列表
       </h4>
-      <div class="episode-list ui eight column doubling grid">
+      <div class="episode-list-loading-wrapper" *ngIf="!episode.bangumi.episodes">
+        <div class="ui active inverted dimmer">
+          <div class="ui medium loader"></div>
+        </div>
+      </div>
+      <div class="episode-list ui eight column doubling grid" *ngIf="episode.bangumi.episodes">
         <div class="column" *ngFor="let eps of episode.bangumi.episodes">
           <a class="ui segment episode-link" *ngIf="eps.status===2" [routerLink]="['/play', eps.id]">
             {{eps.episode_no}}
