--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -27,8 +27,8 @@
             <button *ngIf="urlPath === '/register'" class="ui primary button large fluid submit" type="submit" [disabled]="!registerForm.valid">注册</button>
           </div>
         </form>
-        <div class="login-link">
-          <a [routerLink]="['/login']">已有帐号?登录</a>
+        <div class="login-link additional-info">
+          <a [routerLink]="['/login']">{{urlPath === '/register' ? '已有帐号?登录' : '登录'}}</a>
         </div>
         <div class="ui error message" *ngIf="errorMessage">
           <p>{{errorMessage}}</p>
