fix bug that will make the duration time not available in android. make the webpack-dev-server accessible on any ip

--- a/src/app/home/player/player.html
+++ b/src/app/home/player/player.html
@@ -15,6 +15,7 @@
          [poster]="episode.thumbnail"
          [id]="playerId"
          (loadedmetadata)="onMetadataLoaded()"
+         (durationchange)="onDurationChange($event)"
          (timeupdate)="onTimeUpdate()"
          (progress)="onChunkLoad()"
          (waiting)="onWaiting()"
