add manual upload episode to make a temporary solution for downloading or feed problem

--- a/src/app/admin/bangumi-detail/episode-detail/episode-detail.html
+++ b/src/app/admin/bangumi-detail/episode-detail/episode-detail.html
@@ -27,6 +27,11 @@
         <label>时长(HH:mm:dd)</label>
         <input type="text" placeholder="时长" [(ngModel)]="episode.duration">
       </div>
+      <div class="two wide field">
+        <label>上传文件</label>
+        <input type="file" #filePikcer (change)="onFileSelect(filePikcer.files)">
+        <span *ngIf="uploadProgress">{{uploadProgress}}%</span>
+      </div>
     </div>
     <button class="ui primary button right-aligned" type="submit">Save</button>
   </form>
