--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -85,7 +85,6 @@ view-bangumi-detail {
       width: 100%;
       position: relative;
       display: block;
-      padding-bottom: 1rem;
       .bangumi-cover {
         width: 100%;
         display: block;
@@ -106,7 +105,7 @@ view-bangumi-detail {
         z-index: 100;
         position: relative;
         background-color: #fff;
-        padding: 1rem;
+        padding: 1rem 1rem 2rem 1rem;
         border-top-left-radius: 1rem;
         border-top-right-radius: 1rem;
         &:before {
@@ -126,6 +125,7 @@ view-bangumi-detail {
 
     .episode-list {
       padding: 1rem;
+      margin-top: -1px;
     }
   }
 
