add click to close function for test menu in keyword-builder

--- a/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.less
+++ b/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.less
@@ -19,4 +19,19 @@ keyword-builder {
       margin-left: 1rem;
     }
   }
+  .editor-wrapper {
+    position: relative;
+  }
+  .search-result-wrapper {
+    max-height: 20rem;
+    max-width: 100%;
+    overflow-y: scroll;
+    overflow-x: auto;
+    position: absolute;
+    z-index: 100;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+    .table {
+      overflow: visible;
+    }
+  }
 }
