--- a/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.html
+++ b/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.html
@@ -5,20 +5,22 @@
         <button class="ui primary button" type="button" (click)="testFeed()">Test</button>
         <button class="ui negative button" type="button" (click)="removeKeyword()">DEL</button>
       </div>
-      <table class="search-result ui striped collapsing table" *ngIf="itemList && itemList.length > 0">
-        <thead>
-        <tr>
-          <th>标题</th>
-          <th style="width: 5em;">集数</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let item of itemList">
-          <td>{{item.title}}</td>
-          <td>{{item.eps_no}}</td>
-        </tr>
-        </tbody>
-      </table>
+      <div class="search-result-wrapper" *ngIf="itemList && itemList.length > 0">
+        <table class="search-result ui striped collapsing table">
+          <thead>
+          <tr>
+            <th>标题</th>
+            <th style="width: 5em;">集数</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let item of itemList">
+            <td>{{item.title}}</td>
+            <td>{{item.eps_no}}</td>
+          </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <div class="add-button-wrapper" *ngIf="!isEditorOpen">
       <button class="ui primary button" type="button" (click)="addKeyword()">+</button>
