refactor the whole project to fit the demand of new angular 2 final version

--- a/src/app/home/player/volumne-control/volume-control.html
+++ b/src/app/home/player/volumne-control/volume-control.html
@@ -1,3 +1,3 @@
 <div class="volume-control-wrapper">
-  <ui-slider [progress]="volumeLevel" orientation="vertical" (changes)="volumeChange($event)" (release)="volumeChange($event)"></ui-slider>
+  <ui-slider progress="volumeLevel" orientation="vertical" (changes)="volumeChange($event)" (release)="volumeChange($event)"></ui-slider>
 </div>
