refactoring webpack and dependencies

--- a/src/app/admin/list-bangumi/list-bangumi.html
+++ b/src/app/admin/list-bangumi/list-bangumi.html
@@ -32,14 +32,14 @@
             <span class="entry-key">放送星期</span>
             <span class="entry-value">{{bangumi.air_weekday}}</span>
           </p>
-          <!--<p class="entry">
-            <span class="entry-key">RSS</span>
-            <span class="entry-value">{{bangumi.rss}}</span>
-          </p>-->
-          <!--<p class="entry">
-            <span class="entry-key">正则表达式</span>
-            <span class="entry-value">{{bangumi.eps_regex}}</span>
-          </p>-->
+          <p class="entry">
+            <span class="entry-key">DMHY</span>
+            <span class="entry-value">{{bangumi.dmhy}}</span>
+          </p>
+          <p class="entry">
+            <span class="entry-key">ACG.RIP</span>
+            <span class="entry-value">{{bangumi.acg_rip}}</span>
+          </p>
         </div>
       </div>
     </div>
