fix the image size issue, fix some bug

--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -13,19 +13,19 @@
       <div class="bangumi-basic-info">
         <div class="field">
           <label>番组名</label>
-          <input type="text" [(ngModel)]="bangumi.name"/>
+          <input type="text" [(ngModel)]="bangumi.name" name="name"/>
         </div>
         <div class="field">
           <label>中文名</label>
-          <input type="text" [(ngModel)]="bangumi.name_cn"/>
+          <input type="text" [(ngModel)]="bangumi.name_cn" name="name_cn"/>
         </div>
         <div class="field">
           <label>放送开始</label>
-          <input type="text" [(ngModel)]="bangumi.air_date"/>
+          <input type="text" [(ngModel)]="bangumi.air_date" name="air_date"/>
         </div>
         <div class="field">
           <label>放送星期</label>
-          <input type="text" [(ngModel)]="bangumi.air_weekday"/>
+          <input type="text" [(ngModel)]="bangumi.air_weekday" name="air_weekday"/>
         </div>
         <div class="field">
           <label>DMHY</label>
