--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -97,6 +97,11 @@ home {
       left: 0;
       width: 100%;
       height: 100%;
+      overflow: hidden;
+      > img {
+        object-fit: cover;
+        height: 100%;
+      }
     }
     .icon-holder {
       font-size: 2rem;
