may fix the 1080p video issue

--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -12,17 +12,47 @@ play-episode {
 
     player {
       display: block;
-      //width: 100%;
-      height: 100%;
       flex: 0 1 auto;
     }
 
-    @media (min-width: 1280px) and (min-height: 800px) {
-      player {
-        width: 1280px;
-        height: 720px;
+    .player-width {
+      width: 640px
+    }
+
+    .player-height {
+      height: 360px
+    }
+
+    @media screen and (max-width: 656px) {
+      .player-width {
+        width:426px
+      }
+
+      .player-height {
+        height: 240px
       }
     }
+
+    @media screen and (min-width: 1294px) and (min-height:630px) {
+      .player-width {
+        width:854px
+      }
+
+      .player-height {
+        height: 480px
+      }
+    }
+
+    @media screen and (min-width: 1720px) and (min-height:980px) {
+      .player-width {
+        width:1280px
+      }
+
+      .player-height {
+        height: 720px
+      }
+    }
+
   }
   .episode-info-container {
     margin-top: 2rem;
