add favorites label on default, bangumi-list, bangumi-detail page. add favorite button to let user select favorite status on bangumi

--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -26,6 +26,10 @@ view-bangumi-detail {
       display: inline-block;
       padding: 0 1rem 0 2.5rem;
 
+      .favorite-wrapper {
+        margin-top: 1.8rem;
+      }
+
       .facade-item {
         margin-top: 2.8rem;
         padding-top: 0.6rem;
