--- a/src/app/home/default/default.less
+++ b/src/app/home/default/default.less
@@ -6,4 +6,12 @@ default-component {
   .default-container {
     padding-top: 2rem;
   }
+
+  .bangumi-card {
+    .ui.ribbon.label {
+      position: absolute;
+      top: 0.5rem;
+      left: -1rem;
+    }
+  }
 }
