--- a/src/app/home/bangumi-detail/bangumi-detail.html
+++ b/src/app/home/bangumi-detail/bangumi-detail.html
@@ -21,6 +21,26 @@
       <h3 class="bangumi-title name">
         <span class="tip">日文名:</span><span class="name-text">{{bangumi.name}}</span>
       </h3>
+      <div class="favorite-wrapper">
+        <button *ngIf="!bangumi.favorite_status && !isChoosingFavorite" class="small ui basic button"><i class="empty star icon"></i>收藏</button>
+        <a *ngIf="!isChoosingFavorite" class="ui tag label"
+               [ngClass]="{
+               orange: bangumi.favorite_status === 1,
+               olive: bangumi.favorite_status === 2,
+               blue: bangumi.favorite_status === 3,
+               brown: bangumi.favorite_status === 4,
+               grey: bangumi.favorite_status === 5
+               }"
+           (click)="toggleFavoriteChooser()">我{{FAVORITE_LABEL[bangumi.favorite_status]}}这部动画</a>
+        <div *ngIf="isChoosingFavorite" class="small ui basic buttons">
+          <button class="ui button" [ngClass]="{active: bangumi.favorite_status === 1}" (click)="chooseFavoriteStatus(1)">想看</button>
+          <button class="ui button" [ngClass]="{active: bangumi.favorite_status === 2}" (click)="chooseFavoriteStatus(2)">看过</button>
+          <button class="ui button" [ngClass]="{active: bangumi.favorite_status === 3}" (click)="chooseFavoriteStatus(3)">在看</button>
+          <button class="ui button" [ngClass]="{active: bangumi.favorite_status === 4}" (click)="chooseFavoriteStatus(4)">搁置</button>
+          <button class="ui button" [ngClass]="{active: bangumi.favorite_status === 5}" (click)="chooseFavoriteStatus(5)">抛弃</button>
+        </div>
+        <button *ngIf="isChoosingFavorite" class="cancel-button small ui button" (click)="toggleFavoriteChooser()">取消</button>
+      </div>
       <div class="summary facade-item">
         {{bangumi.summary}}
       </div>
