--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -2,7 +2,7 @@
   <div class="ui medium loader"></div>
 </div>
 <div class="theater-backdrop" *ngIf="episode">
-  <player class="player-width player-height" [episode]="episode"></player>
+  <player class="player-width player-height" [episode]="episode" (onProgress)="onWatchPositionUpdate($event)" (onDurationUpdate)="onDurationUpdate($event)"></player>
 </div>
 <div class="ui container episode-info-container" *ngIf="episode">
   <h3 class=episode-title>
