--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -35,6 +35,10 @@
           <label>ACG_RIP</label>
           <keyword-builder [bangumi]="bangumi" [siteName]="'acg_rip'"></keyword-builder>
         </div>
+        <div class="field">
+          <label>集数偏移（解决某些集数不是从1开始的新番）</label>
+          <input type="text" [(ngModel)]="bangumi.eps_no_offset" name="eps_no_offset"/>
+        </div>
       </div>
     </section>
     <button class="ui right floated primary button" [ngClass]="{loading: isSavingBangumi}" type="submit">Save</button>
