update some indicator styles, fix a bug in favorite-chooser.
add auto update bangumi favorite status base on watch-progress

--- a/src/app/home/bangumi-detail/bangumi-detail.less
+++ b/src/app/home/bangumi-detail/bangumi-detail.less
@@ -171,5 +171,11 @@ view-bangumi-detail {
     .content.unfinished {
       color: #a9a9a9;
     }
+
+    .ui.bottom.attached.progress {
+      .bar {
+        min-width: 1rem;
+      }
+    }
   }
 }
