add favorite action auto update menu

--- a/src/app/home/play-episode/play-episode.less
+++ b/src/app/home/play-episode/play-episode.less
@@ -85,6 +85,10 @@ play-episode {
           }
         }
 
+        .favorite-wrapper {
+          margin-top: 1.8rem;
+        }
+
         .summary {
           margin-top: 2.5rem;
         }
