--- a/src/app/home/play-episode/play-episode.html
+++ b/src/app/home/play-episode/play-episode.html
@@ -25,6 +25,7 @@
     <div class="bangumi-basic-info">
       <h2 class="bangumi-title name-cn"><a [routerLink]="['/bangumi', episode.bangumi_id]">{{episode.bangumi.name_cn}}</a></h2>
       <h4 class="bangumi-title name">{{episode.bangumi.name}}</h4>
+      <favorite-chooser *ngIf="isBangumiReady" [bangumi]="episode.bangumi"></favorite-chooser>
       <div class="summary">
         {{episode.bangumi.summary}}
       </div>
