adjust styles of favorite menu

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -48,12 +48,14 @@ home {
   &.ui.vertical.menu {
     > .item {
       > .header {
+        margin: 0;
         font-size: 0.9rem;
         color: #2185d0;
-        padding-bottom: 0.9em;
+
       }
     }
-    .menu {
+    .menu.favorite-list {
+      padding-top: 1rem;
       > .item {
         font-size: 1rem;
         padding: 0.5em 1.14em;
