--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -12,7 +12,7 @@
   <a class="item" [routerLink]="['/admin']" *ngIf="user && user.level >= 2">Management</a>
   <div class="item">
     <div class="header">我的收藏</div>
-    <div class="menu">
+    <div class="menu favorite-list" *ngIf="myBangumiList && myBangumiList.length > 0">
       <a class="item" *ngFor="let bangumi of myBangumiList" [routerLink]="['/bangumi', bangumi.id]">
         <span class="bangumi-name">
           {{bangumi.name_cn}}
