--- a/src/app/home/player/player.less
+++ b/src/app/home/player/player.less
@@ -20,6 +20,10 @@
     height: 100%;
   }
 
+  .ui.large.loader {
+    z-index: 102;
+  }
+
   .error-info {
     position: absolute;
     display: none;
