--- a/src/app/admin/bangumi-detail/bangumi-detail.html
+++ b/src/app/admin/bangumi-detail/bangumi-detail.html
@@ -43,6 +43,27 @@
           <label>集数偏移（解决某些集数不是从1开始的新番）</label>
           <input type="text" [(ngModel)]="bangumi.eps_no_offset" name="eps_no_offset"/>
         </div>
+        <div class="inline fields">
+          <label>状态</label>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="status" [(ngModel)]="bangumi.status" [value]="0">
+              <label>Pending</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="status" [(ngModel)]="bangumi.status" [value]="1">
+              <label>On Air</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="status" [(ngModel)]="bangumi.status" [value]="2">
+              <label>Finished</label>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <button class="ui right floated primary button" [ngClass]="{loading: isSavingBangumi}" type="submit">Save</button>
