--- a/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.less
+++ b/src/app/admin/bangumi-detail/keyword-builder/keyword-builder.less
@@ -5,6 +5,10 @@ keyword-builder {
     flex-direction: row;
     justify-content: space-around;
 
+    select {
+      flex: 1 1 auto;
+    }
+
     input[type="text"] {
       flex: 1 1 auto;
     }
